fix: button hover position shift

--- a/client/src/pages/Login/login.scss
+++ b/client/src/pages/Login/login.scss
@@ -32,7 +32,7 @@ label {
   width: 100%;
   background-color: #000;
   color: #fff;
-  border: none;
+  border: 1px solid transparent;
   padding: 10px 20px 10px 20px;
   font-size: 0.8rem;
 }
